@@ -1,4 +1,4 @@
-# $NetBSD: ALL,v 1.169 2008/04/30 15:29:11 ad Exp $
+# $NetBSD: ALL,v 1.170 2008/05/01 20:18:18 cegger Exp $
 # From NetBSD: GENERIC,v 1.787 2006/10/01 18:37:54 bouyer Exp
 #
 # ALL machine description file
@@ -17,7 +17,7 @@ include 	"arch/i386/conf/std.i386"
 
 options 	INCLUDE_CONFIG_FILE	# embed config file in kernel binary
 
-#ident 		"ALL-$Revision: 1.169 $"
+#ident 		"ALL-$Revision: 1.170 $"
 
 maxusers	32		# estimated number of users
 
@@ -357,6 +357,7 @@ asus*		at acpi?		# ASUS hotkeys
 attimer*	at acpi?		# AT Timer
 com* 		at acpi?		# Serial communications interface
 fdc* 		at acpi?		# Floppy disk controller
+hpqlb*		at acpi?		# HP Quick Launch Buttons
 hpet* 		at acpi?		# High Precision Event Timer
 joy*		at acpi?		# Joystick/Game port
 lpt* 		at acpi?		# Parallel port
